tests/golden/fixtures/syntax-symbolic-subscripts-err-garbage-unexpected-close-bracket/expected.err
Error: invalid syntax: unexpected ':'
   ╭─[ tests/golden/fixtures/syntax-symbolic-subscripts-err-garbage-unexpected-close-bracket/input.k65:2:6 ]
   │
 2 │   .a]:byte
   │      ┬  
   │      ╰── here
───╯

Error: invalid syntax: unexpected ']'
   ╭─[ tests/golden/fixtures/syntax-symbolic-subscripts-err-garbage-unexpected-close-bracket/input.k65:3:1 ]
   │
 3 │ ] = 0x1234
   │ ┬  
   │ ╰── here
───╯
